--- a/Aliento App/Presentation/Features/Home/Carousel/CarouselItemCell.xib
+++ b/Aliento App/Presentation/Features/Home/Carousel/CarouselItemCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -54,6 +54,7 @@
             <connections>
                 <outlet property="carouselImage" destination="I7M-G1-s6f" id="hp6-MI-2fr"/>
                 <outlet property="form" destination="qra-ad-zFm" id="9Pc-CW-gS9"/>
+                <outlet property="rootView" destination="ZFp-aG-Jae" id="kns-oe-cbV"/>
                 <outlet property="textLabel" destination="S0v-ab-PA4" id="s5d-gV-cvY"/>
             </connections>
             <point key="canvasLocation" x="160.86956521739131" y="39.508928571428569"/>
